# GraphDBA

./:  Knowledge.md  .env.example  .gitignore  AGENTS.md  BluePrint.md  CLAUDE.md  GraphDBAReport.md  PHASE2_TASK3_COMPLETION.md  PLAN.md  Procfile  README.md  TODO.md  alembic.ini  alert.txt  global_database_setup.sql  pyproject.toml  requirements.txt  result.txt  test.py  todo
.claude/skills/newskill/: SKILL.md
.codex/: config.toml
config/: settings.py  tools_config.json
demo/: connection_demo.py  integraded_demo.py  langgraph_demo.py  mcp_client_demo.py  mcp_server_demo.py
docs/: DOCUMENT_LOADER_REFERENCE.md  developer_guide.md  fix.md
docs/adrs/: 001_adopt_uv_for_project_scaffolding.md  002.md  003_adopt_table_for_ticket_storage_management.md  004_adopt_regex_for_query_validation.md  005_adopt_targeted_clear_flag_for_alert_failure_reason.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppShell.tsx  BrandMark.tsx  LoginShell.tsx  TextInput.tsx
frontend/src/lib/: api.ts  authStorage.ts  format.ts
frontend/src/styles/: index.css
mcp_servers/: read_probe_server.py  security_utils.py  start_read_probe.sh
migrations/: env.py
migrations/versions/: 07e516d7a865_create_alerts_hypotheses_tickets_.py  2f4c1d8e9a10_create_alert_policy_registry.py  9b7c2e4f1a6d_create_run_leases.py  d8e3e1a5c098_create_auth_metadata_tables.py
monitor/: alert_rules.yml  alertmanager.yml  business_rules.yml  community_rules.yml  docker-compose.yml  prometheus.yml
rag/: __init__.py  document_loader.py  feedback_store.py  metric_to_text.py  pgvector_store.py
scripts/: seed_alert_policies.py  seed_auth.py  seed_business_databases.py  seed_history_alerts.py
src/graphdba/agents/: READNE.md  container.py  diagnostic.py  execution.py  get_alert_status.py  graph.py  planning.py  proposing.py  runtime.py  state.py  (+3 more)
tests/: MANUAL_TEST_DOCUMENT_LOADER.md  conftest.py  document_loader_test.py  feedback_store_test.py  logger_test.py  metric_to_text_test.py  pgvector_store_test.py  read_probe_server_test.py  security_utils_test.py  settings_test.py
tests/data/: deadlock_sample.yaml
tests/integration/: test_workflow.py
tests/unit/: test_diagnostic.py  test_server_read.py
utils/: logger.py
(+77 files in other folders)
