[project]
name = "graphdba"
version = "0.1.0"
description = "Industrial-grade Agentic database self-healing and tuning system"
authors = [
    {name = "hunkyhsu"}
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "mcp>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "dashscope>=1.14.0",
    "litellm>=1.30.0",
    "chromadb>=0.4.22",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "unstructured>=0.12.0",
    "torch>=2.9.0",
    "sentence-transformers>=2.3.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "tenacity>=8.2.3",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
