[project]
name = "graphdba"
version = "0.1.0"
description = "Agentic PostgreSQL diagnostic and remediation workflow"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx[socks]>=0.28.1",
    "langchain>=1.2.17",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "mcp>=1.27.0",
    "openai>=2.33.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
    "langchain-huggingface>=1.2.2",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["graphdba*"]

[tool.setuptools.package-data]
"graphdba.database" = ["schema.sql"]
